--- a/index.html
+++ b/index.html
@@ -12,17 +12,26 @@
         <p id="description">What is your future goal job as a Computer Science student? </p>
         <form id="Survey">
             <div>
-                <label id="name-label"> Name: </label>   
-                <input required type="text" id="name" class="input-field" placeholder="Please enter your name" >
+                <label id="name-label"> Name:</label>   
+                <input required type="text" id="name" class="input-field" placeholder="Please enter your name">
             </div>
             <div>
-                <label id="email-label">Email: </label>   
-                <input required type="text" id="email" class="input-field" placeholder="Please enter your email" >
+                <label id="email-label">Email:</label>   
+                <input required type="text" id="email" class="input-field" placeholder="Please enter your email">
             </div>
             <div>
-                <label id="age-label">Age: </label>   
-                <input required type="text" id="age" class="input-field" placeholder="Please enter your age" >
+                <label id="age-label">Age:</label>   
+                <input required type="text" id="age" class="input-field" placeholder="Please enter your age">
             </div>
+            <div class="gender">
+                <label id="gender-label">Gender:</label>
+                <input type="radio" name="gender" value="male" id="male">Male
+                <input type="radio" name="gender" value="female" id="female">Female
+                <input type="radio" name="gender" value="other" id="other">Other
+            </div>
+
+            </div>
+        
         </form>
         
     </div>
