add a comment section

--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
                 </select>
             </div>
             
+            <div class="comments">
+                <label id="comment-label">Do you have any interesting project ideas that you want to share?
+                    <br>Post the links or ideas below!</label><br>
+                    <textarea id="comments" style="height:50px;resize:vertical;" name="comment" placeholder="Ideas that might change the world go here..."></textarea>
+            </div>
             </div>
         </form>
         
