--- a/index.html
+++ b/index.html
@@ -10,20 +10,19 @@
     <h1 id ="title">Survey Form</h1>
     <div id="outer">
         <p id="description">What is your future goal job as a Computer Science student? </p>
-        <form id="Survey">
+        <form id="survey-form">
             <div>
-                <label id="name-label"> Name:</label>   
-                <input required type="text" id="name" class="input-field" placeholder="Please enter your name">
+                <label for="name" id="name-label"> Name:</label>   
+                <input type="text" id="name" class="input-field" placeholder="Please enter your name" required>
             </div>
 
             <div>
-                <label id="email-label">Email:</label>   
-                <input required type="text" id="email" class="input-field" placeholder="Please enter your email">
-            </div>
+                <label for="email" id="email-label"> Email:</label>
+                <input type="email" id="email" class="input-field" placeholder="Please enter your email" required>
 
             <div>
-                <label id="age-label">Age:</label>   
-                <input required type="text" id="age" class="input-field" placeholder="Please enter your age">
+                <label for="age" id="number-label">Age:</label>   
+                <input type="number" id="number" class="input-field" placeholder="Please enter your age" min="1" max="120" required>
             </div>
 
             <div class="gender">
@@ -64,10 +63,11 @@
             
             <div class="comments">
                 <label id="comment-label">Do you have any interesting project ideas that you want to share?
-                    <br>Post the links or ideas below!</label><br>
-                    <textarea id="comments" style="height:50px;resize:vertical;" name="comment" placeholder="Ideas that might change the world go here..."></textarea>
+                <br>Post the links or ideas below!</label><br>
+                <textarea id="comments" style="height:50px;resize:vertical;" name="comments" placeholder="Ideas that might change the world go here..."></textarea>
             </div>
             </div>
+            <button id="submit" type="submit">Submit</button>
         </form>
         
     </div>
