--- a/index.html
+++ b/index.html
@@ -60,6 +60,21 @@
                     <option value="Network Security Administrator">Network Security Administrator</option>                    
                 </select>
             </div>
+            <div class="checkbox">
+                <label for="fields">The Technology fields that you are interested in</label>
+                <div class="fields">
+                    <input type="checkbox" name="fields" value="Robotics">Robotics
+                    <input type="checkbox" name="fields" value="Self-Driving Cars">Self-Driving Cars
+                    <input type="checkbox" name="fields" value="Smart Buildings">Smart Buildings
+                    <input type="checkbox" name="fields" value="Artificial Intelligence">Artificial Intelligence<br>
+                    <input type="checkbox" name="fields" value="Virtual Reality">Virtual Reality
+                    <input type="checkbox" name="fields" value="Nano Technology">Nano Technology
+                    <input type="checkbox" name="fields" value="Mobile Development">Mobile Development
+                    <input type="checkbox" name="fields" value="Game Development">Game Development
+                    
+                </div>
+ 
+            </div>
             
             <div class="comments">
                 <label id="comment-label">Do you have any interesting project ideas that you want to share?
