--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Survey Form</title>
 </head>
 <body>
     <h1 id ="title">Survey Form</h1>
-    <div id="outer">
+    <div id="myform">
         <p id="description">What is your future goal job as a Computer Science student? </p>
         <form id="survey-form">
             <div>
