--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 id ="title">Survey Form</h1>
-    <div id="myform">
+    <div class="mysurvey">
         <p id="description">What is your future goal job as a Computer Science student? </p>
         <form id="survey-form">
             <div>
@@ -22,7 +22,7 @@
                 <input type="email" id="email" class="input-field" placeholder="Please enter your email" required>
 
             <div>
-                <label for="age" id="number-label">Age:</label>   
+                <label for="age" id="number-label">  Age:</label>   
                 <input type="number" id="number" class="input-field" placeholder="Please enter your age" min="1" max="120" required>
             </div>
 
