continute to fix the form format for css

--- a/index.html
+++ b/index.html
@@ -30,15 +30,16 @@
 
             <div class="gender">
                 <div class="mylabels">
-                <label for="gender" id="gender-label">Gender:</label></div> 
-                <input type="radio" name="gender" value="male" id="male">Male
-                <input type="radio" name="gender" value="female" id="female">Female
-                <input type="radio" name="gender" value="other" id="other">Other
+                <label for="gender" id="gender-label">Gender:</label></div> <br>
+                <input type="radio" name="gender" value="male" id="male">Male<br>
+                <input type="radio" name="gender" value="female" id="female">Female<br>
+                <input type="radio" name="gender" value="other" id="other">Other<br>
             </div>
         
             <div class="choice">
                 <div class="mylabels">
                 <label id="choice-label">Please pick your first choice</label></div>
+                <div class="rightfuncton">
                 <select id="dropdown">
                     <option value="Software Developer">Software Developer</option>
                     <option value="Computer Hardware Engineer">Computer Hardware Engineer</option>
@@ -49,11 +50,12 @@
                     <option value="Game Developer">Game Developer</option>
                     <option value="Computer Programmer">Computer Programmer</option>
                     <option value="Network Security Administrator">Network Security Administrator</option>                    
-                </select>
+                </select></div>
             </div>
             <div class="choice">
                 <div class="mylabels">
                 <label id="choice-label">Please pick your second choice</label></div>
+                <div class="rightfuncton">
                 <select id="dropdown">
                     <option value="Software Developer">Software Developer</option>
                     <option value="Computer Hardware Engineer">Computer Hardware Engineer</option>
@@ -64,7 +66,7 @@
                     <option value="Game Developer">Game Developer</option>
                     <option value="Computer Programmer">Computer Programmer</option>
                     <option value="Network Security Administrator">Network Security Administrator</option>                    
-                </select>
+                </select> </div>
             </div>
             <div class="checkbox">
                 <div class="mylabels">
