fix some format in css

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
             <div class="comments">
                 <div class="mylabels">
                 <label id="comment-label">Do you have any interesting project ideas or links that you want to share?</label><br></div>
-                <textarea id="comments" style="height:50px;resize:vertical;" name="comments" placeholder="Ideas that might change the world go here..."></textarea>
+                <div class="rightfunction">
+                <textarea id="comments" style="height:100px;resize:vertical;" name="comments" placeholder="Ideas that might change the world go here..."></textarea> </div>
             </div>
             </div>
             <button id="submit" type="submit">Submit</button>
