--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             
             <div class="checkbox">
                 <div class="mylabels">
-                <label for="fields">Please check your interested technology fields:</label></div>
+                <label for="fields">Please check the technology fields that you are interested in:</label></div>
                 <div class="rightfunction">
                     <input type="checkbox" name="fields" value="Robotics">Robotics<br>
                     <input type="checkbox" name="fields" value="Self-Driving Cars">Self-Driving Cars<br>
